--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index2.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Amritpal Singh",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "connect-livereload": "^0.6.1",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "livereload": "^0.9.3",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
-    "socialmediaservices": "file:"
+    "socialmediaservices": "file:",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
